Add decoration to overview

--- a/src/design/molecules/icon-card/icon-card.component.html
+++ b/src/design/molecules/icon-card/icon-card.component.html
@@ -1,6 +1,8 @@
 <div class="card" [title]="title() | titlecase">
   @if (decoration()) {
-    <div class="card-decoration">{{ decoration() }}</div>
+    <div class="card-decoration">
+      {{ decoration() }}
+    </div>
   }
 
   <!-- Heading -->
