--- a/src/design/organisms/icon-card-list/icon-card-list.component.html
+++ b/src/design/organisms/icon-card-list/icon-card-list.component.html
@@ -11,6 +11,7 @@
           [title]="article.title"
           [subText]="article.subText"
           [updateDatetime]="article.updateDatetime"
+          [decoration]="article.decoration"
         ></app-icon-card>
       </a>
     </div>
