Prevent swipe tracking on map

--- a/src/design/templates/map/map.component.html
+++ b/src/design/templates/map/map.component.html
@@ -35,6 +35,8 @@
         @if (map()) {
           <div class="mb-5 col">
             <app-ngx-leaflet-map
+              (touchstart)="$event.preventDefault()"
+              (touchend)="$event.preventDefault()"
               [mapData]="map()"
               [serverUrl]="serverUrl()"
             ></app-ngx-leaflet-map>
