Minor scroll performance optimization

--- a/src/design/organisms/page/page.component.html
+++ b/src/design/organisms/page/page.component.html
@@ -38,7 +38,7 @@
 }
 
 <div class="page" #content>
-  <div class="page__content" (scroll)="onPageScroll($event)" #innerContent>
+  <div class="page__content" #innerContent>
     <router-outlet #routerOutlet></router-outlet>
   </div>
 
