--- a/src/design/organisms/toast-overlay/toast-overlay.component.scss
+++ b/src/design/organisms/toast-overlay/toast-overlay.component.scss
@@ -1,113 +1,71 @@
+@import "/src/screens.scss";
+
 :host {
   position: absolute;
 }
 
-.button-container {
-  &:focus,
-  &:focus-within,
-  &:hover,
-  &:focus-visible {
-    .toast {
-      outline: var(--focus-outline);
-    }
-  }
-}
-
 .toast {
-  position: fixed;
-  bottom: 10%;
-  right: 10%;
-  width: fit-content;
-  max-width: 50%;
-  --negated-toast-padding: calc(var(--bs-toast-padding-x) * -1);
-  --toast-padding-x: var(--bs-toast-padding-x);
-  --toast-padding-y: calc(var(--bs-toast-padding-y) / 2);
-
   &:focus,
   &:focus-within,
   &:hover,
   &:focus-visible {
     outline: var(--focus-outline);
   }
+}
 
-  &__heading {
-    border-radius: var(--bs-toast-border-radius) var(--bs-toast-border-radius) 0
-      0;
-    margin: var(--negated-toast-padding);
-    margin-bottom: unset;
-    padding: var(--toast-padding-y) var(--toast-padding-x) 0
-      var(--toast-padding-x);
-    border-bottom: 2px solid var(--bs-toast-border-color);
+.toast {
+  position: fixed;
+  bottom: 10%;
+  width: 93%;
+  right: 3.5%;
+
+  --bs-light-rgb: var(--bs-white);
+  --bs-toast-header-color: var(--bs-white);
+  --bs-toast-color: var(--bs-white);
+  --toast-padding-x: var(--bs-toast-padding-x);
+  --toast-padding-y: calc(var(--bs-toast-padding-y) / 2);
+  --bs-toast-border-width: 3px;
+
+  &--primary {
+    --bs-border-color-translucent: var(--bs-primary);
   }
-
-  &__body {
-    border-radius: 0 0 var(--bs-toast-border-radius)
-      var(--bs-toast-border-radius);
-    margin: var(--negated-toast-padding);
-    margin-top: unset;
-    padding: 0 var(--toast-padding-x) var(--toast-padding-y)
-      var(--toast-padding-x);
-
-    &--no-header {
-      margin-top: var(--negated-toast-padding);
-      padding-top: var(--toast-padding-y);
-    }
+  &--secondary {
+    --bs-border-color-translucent: var(--bs-secondary);
   }
-
-  &--warning,
-  &--success,
-  &--info,
+  &--success {
+    --bs-border-color-translucent: var(--bs-success);
+  }
+  &--danger {
+    --bs-border-color-translucent: var(--bs-danger);
+  }
+  &--warning {
+    --bs-border-color-translucent: var(--bs-warning);
+  }
+  &--info {
+    --bs-border-color-translucent: var(--bs-info);
+  }
   &--light {
-    color: var(--bs-black);
+    --bs-border-color-translucent: var(--bs-light);
+  }
+  &--dark {
+    --bs-border-color-translucent: var(--bs-dark);
   }
 
-  &--secondary,
-  &--dark {
-    color: var(--bs-white);
+  @include media-breakpoint-up(sm) {
+    width: fit-content;
+    max-width: 50%;
+    bottom: 5%;
   }
 }
 
-.heading {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: var(--spacer-1);
-  font-weight: bold;
-
-  &--warning,
-  &--success,
-  &--info,
-  &--light {
-    filter: brightness(120%);
-    color: var(--bs-black);
-  }
-
-  &--secondary,
-  &--dark {
-    filter: brightness(80%);
-    color: var(--bs-white);
-  }
-
-  &__icon {
-  }
-
+.toast-header {
   &__text {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: var(--spacer-2);
-  }
-
-  &__close-button {
-    font-size: 20px;
-    padding-left: var(--spacer-1);
-    padding-right: var(--spacer-1);
-    &:focus,
-    &:focus-within,
-    &:hover,
-    &:focus-visible {
-      outline: var(--focus-outline);
-    }
+    flex: 1;
+    font-weight: bold;
   }
 }
 
@@ -115,24 +73,35 @@
   display: flex;
   flex-direction: column;
 
+  &__text {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: var(--spacer-2);
+    text-align: start;
+  }
+
   &__text-container {
     max-height: calc(var(--bs-body-font-size) * 8);
     max-width: 100%;
     overflow: auto;
+
+    &:focus,
+    &:focus-within,
+    &:hover,
+    &:focus-visible {
+      outline: var(--focus-outline);
+      border-radius: var(--bs-border-radius);
+    }
   }
 
   &__button {
     width: fit-content;
   }
 
-  &__icon {
-    margin-left: var(--spacer-2);
-  }
-
   &__button-container {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
     gap: var(--spacer-3);
   }
 }
