Fix search bug on chromium

--- a/src/app/campaign/pages/home-page/home-page.component.html
+++ b/src/app/campaign/pages/home-page/home-page.component.html
@@ -4,6 +4,6 @@
   [articles]="recentlyUpdatedArticles()"
   [canLoadMore]="hasMoreArticles() === true"
   [isLoading]="store.isLoading()"
-  (search)="search($event)"
+  (appSearch)="search($event)"
   (loadArticlePage)="loadArticlePage($event)"
 ></app-home>
