--- a/src/design/templates/home/home.component.html
+++ b/src/design/templates/home/home.component.html
@@ -22,7 +22,7 @@
     <app-search-field
       class="home__search-bar"
       [placeholder]="'Search for Articles...'"
-      (search)="search.emit($event)"
+      (appSearch)="appSearch.emit($event)"
     ></app-search-field>
 
     <!-- News -->
