--- a/src/design/templates/search/search.component.html
+++ b/src/design/templates/search/search.component.html
@@ -10,7 +10,7 @@
       (sidebarChange)="onCategorySelect($event)"
     ></app-sidebar-legend>
 
-    <app-search-field (search)="search($event)"></app-search-field>
+    <app-search-field (appSearch)="search($event)"></app-search-field>
 
     <!-- Article List -->
     <div class="row search__results">
