--- a/src/design/organisms/icon-card-list/icon-card-list.component.scss
+++ b/src/design/organisms/icon-card-list/icon-card-list.component.scss
@@ -1,9 +1,13 @@
-.entry{
+.entry {
   padding-left: var(--spacer-2);
   padding-right: var(--spacer-2);
   margin-bottom: var(--spacer-4);
-  
-  &__link{
+
+  &--placeholder {
+    height: 280px;
+  }
+
+  &__link {
     font-weight: unset;
     text-decoration: unset;
   }
