--- a/src/design/templates/home/home.component.html
+++ b/src/design/templates/home/home.component.html
@@ -16,6 +16,8 @@
           [text]="campaignData()?.subtitle ?? ''"
         ></app-html-text>
       </header>
+    } @else {
+      <app-placeholder class="heading-container--placeholder" />
     }
 
     <!-- Search Bar -->
@@ -26,10 +28,10 @@
     ></app-search-field>
 
     <!-- News -->
-    <app-icon-card-list [articles]="articleEntries()"></app-icon-card-list>
-
-    @if (isLoading()) {
-      <app-spinner class="loading__spinner"></app-spinner>
-    }
+    <app-icon-card-list
+      class="home__recently-updated-articles"
+      [isLoading]="isLoading()"
+      [articles]="articleEntries()"
+    ></app-icon-card-list>
   </article>
 </app-page-container>
