--- a/src/design/templates/home/home.component.scss
+++ b/src/design/templates/home/home.component.scss
@@ -1,3 +1,5 @@
+@import "/src/screens.scss";
+
 .home {
   display: flex;
   flex-direction: column;
@@ -10,12 +12,25 @@
   &__search-bar {
     width: 100%;
   }
+
+  &__recently-updated-articles {
+    width: 100%;
+  }
 }
 
 .heading-container {
   display: flex;
   flex-direction: column;
   text-align: center;
+
+  &--placeholder {
+    width: 220px;
+    height: 180px;
+    @include media-breakpoint-up(md) {
+      width: 340px;
+      height: 200px;
+    }
+  }
 
   &__heading {
     margin-bottom: var(--spacer-1);
