--- a/src/design/organisms/toast-overlay/toast-overlay.component.html
+++ b/src/design/organisms/toast-overlay/toast-overlay.component.html
@@ -13,18 +13,18 @@
 
 <ng-template #toastOverlay>
   @if (toast) {
-    <ngb-toast
-      class="toast toast--{{ toast.type.toLocaleLowerCase() }}"
-      data-bs-theme="dark"
-      [autohide]="!!toast.dismissMs && toast.dismissMs > 0"
-      [delay]="toast.dismissMs ? toast.dismissMs : 0"
-      [ariaLive]="toast.important ? 'alert' : 'polite'"
-      [animation]="true"
-      (hidden)="dismissCurrentToast()"
-      (shown)="toast.onShow ? toast.onShow() : undefined"
-    >
-      <ng-template ngbToastHeader>
-        @if (toast.header) {
+    @if (toast.header) {
+      <ngb-toast
+        class="toast toast--{{ toast.type.toLocaleLowerCase() }}"
+        data-bs-theme="dark"
+        [autohide]="!!toast.dismissMs && toast.dismissMs > 0"
+        [delay]="toast.dismissMs ? toast.dismissMs : 0"
+        [ariaLive]="toast.important ? 'alert' : 'polite'"
+        [animation]="true"
+        (hidden)="dismissCurrentToast()"
+        (shown)="toast.onShow ? toast.onShow() : undefined"
+      >
+        <ng-template ngbToastHeader>
           <span class="toast-header__text">
             @let headerIcon = icon();
             @if (headerIcon) {
@@ -38,49 +38,63 @@
               [innerHTML]="toast.header.text"
             ></span>
           </span>
-        }
-      </ng-template>
+        </ng-template>
 
-      <div class="toast__body body">
-        <span class="body__text">
-          @let bodyIcon = toast.body.icon;
-          @if (bodyIcon) {
-            <app-icon class="body__icon" [icon]="bodyIcon" />
-          }
-
-          @if (toast.body.text) {
-            <div
-              class="body__text-container"
-              [innerHTML]="toast.body.text"
-            ></div>
-          }
-        </span>
-
-        <div class="body__button-container">
-          @let firstButton = toast.body.buttons?.[0];
-          @if (firstButton) {
-            <app-button
-              class="body__button"
-              [text]="firstButton.label"
-              [icon]="firstButton.icon"
-              [size]="'SMALL'"
-              [type]="'PRIMARY'"
-              (click)="firstButton.onClick(dismissCurrentToast.bind(this))"
-            ></app-button>
-          }
-          @let secondButton = toast.body.buttons?.[1];
-          @if (secondButton) {
-            <app-button
-              class="body__button"
-              [text]="secondButton.label"
-              [icon]="secondButton.icon"
-              [size]="'SMALL'"
-              [type]="'SECONDARY'"
-              (click)="secondButton.onClick(dismissCurrentToast.bind(this))"
-            ></app-button>
-          }
-        </div>
-      </div>
-    </ngb-toast>
+        <ng-container *ngTemplateOutlet="body" />
+      </ngb-toast>
+    } @else {
+      <ngb-toast
+        class="toast toast--{{ toast.type.toLocaleLowerCase() }}"
+        data-bs-theme="dark"
+        [autohide]="!!toast.dismissMs && toast.dismissMs > 0"
+        [delay]="toast.dismissMs ? toast.dismissMs : 0"
+        [ariaLive]="toast.important ? 'alert' : 'polite'"
+        [animation]="true"
+        (hidden)="dismissCurrentToast()"
+        (shown)="toast.onShow ? toast.onShow() : undefined"
+      >
+        <ng-container *ngTemplateOutlet="body" />
+      </ngb-toast>
+    }
   }
+</ng-template>
+
+<ng-template #body>
+  <div class="toast__body body">
+    <span class="body__text">
+      @let bodyIcon = toast?.body?.icon;
+      @if (bodyIcon) {
+        <app-icon class="body__icon" [icon]="bodyIcon" />
+      }
+
+      @if (toast?.body?.text) {
+        <div class="body__text-container" [innerHTML]="toast?.body?.text"></div>
+      }
+    </span>
+
+    <div class="body__button-container">
+      @let firstButton = toast?.body?.buttons?.[0];
+      @if (firstButton) {
+        <app-button
+          class="body__button"
+          [text]="firstButton.label"
+          [icon]="firstButton.icon"
+          [size]="'SMALL'"
+          [type]="'PRIMARY'"
+          (click)="firstButton.onClick(dismissCurrentToast.bind(this))"
+        ></app-button>
+      }
+      @let secondButton = toast?.body?.buttons?.[1];
+      @if (secondButton) {
+        <app-button
+          class="body__button"
+          [text]="secondButton.label"
+          [icon]="secondButton.icon"
+          [size]="'SMALL'"
+          [type]="'SECONDARY'"
+          (click)="secondButton.onClick(dismissCurrentToast.bind(this))"
+        ></app-button>
+      }
+    </div>
+  </div>
 </ng-template>
