Add campaign icon to image grid of campaign overview

--- a/src/design/organisms/image-grid/image-grid.component.html
+++ b/src/design/organisms/image-grid/image-grid.component.html
@@ -16,7 +16,16 @@
             }"
           >
             <div class="entry__overlay">
-              <h4 class="entry__heading">{{ entry[labelProp()] }}</h4>
+              <h4 class="entry__heading heading">
+                @let iconPropVal = iconProp();
+                @if (iconPropVal && entry[iconPropVal]) {
+                  <img
+                    class="heading__icon"
+                    [src]="serverUrl() + entry[iconPropVal]"
+                  />
+                }
+                {{ entry[labelProp()] }}
+              </h4>
             </div>
           </a>
         }
