--- a/src/design/templates/campaign-overview/campaign-overview.component.html
+++ b/src/design/templates/campaign-overview/campaign-overview.component.html
@@ -49,6 +49,7 @@
           [imageProp]="'background_image'"
           [serverUrl]="serverUrl()"
           [labelProp]="'name'"
+          [iconProp]="'icon'"
           (entryClick)="onCampaignClick($event)"
         ></app-image-grid>
       } @else {
