--- a/src/design/organisms/image-grid/image-grid.component.scss
+++ b/src/design/organisms/image-grid/image-grid.component.scss
@@ -1,20 +1,20 @@
-:host{
+:host {
   --image-height: 90vh;
 }
 
-.container-fluid{
+.container-fluid {
   height: var(--image-height);
 }
 
-.image-grid{
+.image-grid {
   height: 100%;
-    
-  &__entry{
+
+  &__entry {
     cursor: pointer;
   }
 }
 
-.entry{
+.entry {
   position: relative;
   text-decoration: none;
   display: flex;
@@ -22,21 +22,21 @@
   background-size: cover;
   background-position: center;
   min-height: 30vh;
-  
+
   opacity: 0.75;
   transition: opacity 0.2s ease-in-out;
-  
-  &:hover{
+
+  &:hover {
     opacity: 1;
-    
-    .entry__heading{
+
+    .entry__heading {
       color: var(--link-blue);
-      transform: scale(1.5);
+      transform: scale(1.3);
       transition: transform 0.2s ease-in-out;
     }
   }
-  
-  &__overlay{
+
+  &__overlay {
     position: absolute;
     background-color: var(--wiki-bg-transparent);
     z-index: 1;
@@ -48,10 +48,18 @@
     align-items: center;
     text-align: center;
   }
-  
-  &__heading{
+
+  &__heading {
     margin-bottom: var(--spacer-0);
     padding-left: var(--spacer-3);
     padding-right: var(--spacer-3);
+  }
+}
+
+.heading {
+  &__icon {
+    height: var(--spacer-5);
+    width: var(--spacer-5);
+    border-radius: var(--bs-border-radius);
   }
 }
