--- a/src/design/templates/campaign-overview/campaign-overview.component.scss
+++ b/src/design/templates/campaign-overview/campaign-overview.component.scss
@@ -2,7 +2,7 @@
 
 .container {
   width: 100vw;
-  min-height: 100vh; //Ensures the campaigns take up at least the whole screen, maybe more
+  min-height: 100dvh; //Ensures the campaigns take up at least the whole screen, maybe more
   max-width: unset !important;
   padding: 0 !important;
   display: flex;
