Remove animate.css and just do it inside angular

--- a/src/design/molecules/confirmation-toggle-button/confirmation-toggle-button.component.html
+++ b/src/design/molecules/confirmation-toggle-button/confirmation-toggle-button.component.html
@@ -1,4 +1,4 @@
-<div #toggleElement>
+<div [@flipInY]="isActive() ? 'sideA' : 'sideB'">
   <ng-container
     *ngTemplateOutlet="isActive() ? activeToggle : inactiveToggle"
   />
