--- a/src/design/organisms/page-container/page-container.component.html
+++ b/src/design/organisms/page-container/page-container.component.html
@@ -1,5 +1,5 @@
-<div class="page">
-  <article class="page__foreground" #pageElement>
+<div class="page" [@fadeIn]>
+  <article class="page__foreground">
     <ng-content></ng-content>
   </article>
 </div>
