--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-page [serverUrl]="serverUrl" (logout)="logout()"></app-page>
-
+@if ((hasReachedInitialStability$ | async) === false) {
+  <app-splash-screen [@fadeOut] />
+}
 <app-toast-overlay></app-toast-overlay>
