--- a/src/design/atoms/button/button.component.html
+++ b/src/design/atoms/button/button.component.html
@@ -2,6 +2,10 @@
 @if (iconVal) {
   <app-icon [class.btn__icon]="text()" [icon]="iconVal"></app-icon>
 }
-<span [class.btn__text--large]="size() === 'LARGE'">
+<span class="btn__text" [class.btn__text--large]="size() === 'LARGE'">
   {{ text() }}
 </span>
+
+@if (isLoading()) {
+  <app-spinner class="btn__spinner"></app-spinner>
+}
