--- a/src/global_class_modifications.scss
+++ b/src/global_class_modifications.scss
@@ -55,4 +55,11 @@ button {
   &:hover {
     color: var(--bs-link-hover-color);
   }
+
+  &:focus,
+  &:focus-within,
+  &:hover,
+  &:focus-visible {
+    outline: var(--focus-outline);
+  }
 }
