--- a/src/design/molecules/image-card/image-card.component.html
+++ b/src/design/molecules/image-card/image-card.component.html
@@ -1,10 +1,52 @@
-<div class="card">
-  @if (imageUrl()) {
-    <img class="card-img-top" [src]="serverUrl() + imageUrl()" [alt]="alt()" />
+<div class="card" [class.card--active]="inFocus()" data-register-focus>
+  @if (currentImage()) {
+    <div class="card__img-container">
+      <a class="card__img-link" [routerLink]="link()">
+        <img
+          class="card-img-top"
+          [src]="serverUrl() + currentImage()"
+          [alt]="alt()"
+        />
+      </a>
+
+      @if (inFocus()) {
+        <button
+          class="card__img-close-btn"
+          btn
+          [kind]="'NONE'"
+          [icon]="'xmark'"
+          (click)="closeBtnClicked$.next($event)"
+          data-ignore-click="true"
+        ></button>
+      } @else {
+        <button
+          class="card__img-close-btn"
+          btn
+          [kind]="'NONE'"
+          [icon]="'expand'"
+          data-ignore-click="true"
+        ></button>
+      }
+    </div>
   }
   <div class="card-body">
-    <h5 class="card-title">
-      {{ text() }}
-    </h5>
+    @if (imageUrls().length > 1) {
+      <div class="card__img-selectors" (click)="$event.preventDefault()">
+        @for (_ of imageUrls(); track $index) {
+          <button
+            class="card__img-selector"
+            [class.card__img-selector--active]="$index === currentImageIndex()"
+            (click)="selectorClicked$.next({ index: $index, event: $event })"
+          >
+            {{ $index + 1 }}
+          </button>
+        }
+      </div>
+    }
+    <a class="card__title-link" [routerLink]="link()">
+      <h5 class="card-title">
+        {{ text() }}
+      </h5>
+    </a>
   </div>
 </div>
