--- a/src/design/molecules/image-card/image-card.component.scss
+++ b/src/design/molecules/image-card/image-card.component.scss
@@ -1,29 +1,54 @@
+@import "/src/screens.scss";
+
 :host {
   position: relative;
   display: block;
-
-  &:has(:hover) {
-    height: 13rem;
-    .card {
-      position: absolute;
-      top: 0;
-      width: 100%;
-      transform: scale(1.3);
-      transition: transform 0.2s ease-in-out;
-      z-index: 3;
-      box-shadow:
-        0 0 0 5px rgba(0, 0, 0, 0.4),
-        0 0 20px rgba(0, 0, 0, 0.6),
-        0 10px 20px rgba(0, 0, 0, 0.8);
-
-      .card-img-top {
-        max-height: unset;
-      }
-    }
-  }
 }
 
 .card {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+
+  &--active {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 3;
+    box-shadow:
+      0 0 0 5px rgba(0, 0, 0, 0.4),
+      0 0 20px rgba(0, 0, 0, 0.6),
+      0 10px 20px rgba(0, 0, 0, 0.8);
+
+    @include media-breakpoint-up(lg) {
+      transition: transform ease-in-out 0.2s;
+      transform: scale(1.2);
+    }
+
+    .card__img-container {
+      display: flex;
+      max-width: 100%;
+      max-height: 100%;
+    }
+
+    .card__img-link {
+      flex: 1;
+      display: flex;
+    }
+
+    .card-img-top {
+      max-width: 100%;
+      height: 40vh;
+      max-height: unset;
+      object-fit: scale-down;
+      object-position: top;
+    }
+
+    .card-body {
+      flex: unset;
+    }
+  }
+
   &-body {
     padding: var(--spacer-3);
   }
@@ -33,8 +58,61 @@
     text-align: center;
   }
 
+  &__title-link {
+    @include media-breakpoint-up(md) {
+      text-decoration: none;
+    }
+  }
+
+  &__img-container {
+    flex: 1;
+    position: relative;
+  }
+
   &-img-top {
     object-fit: cover;
     max-height: 7rem;
+    transition: 0.5s height;
+  }
+
+  &__img-close-btn {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: var(--spacer-2);
+    right: var(--spacer-2);
+    background-color: var(--bs-dark);
+    --btn-pad: var(--spacer-2);
+    padding: var(--btn-pad) var(--btn-pad) var(--btn-pad)
+      calc(var(--btn-pad) + 0.25rem);
+    border-radius: 50%;
+    z-index: 2;
+
+    @include media-breakpoint-up(md) {
+      display: none;
+    }
+  }
+
+  &__img-selectors {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin-top: var(--spacer-2);
+    margin-bottom: var(--spacer-2);
+    gap: var(--spacer-2);
+  }
+
+  &__img-selector {
+    border-radius: 50%;
+    padding: var(--spacer-1) var(--spacer-2);
+    border: var(--bs-dark) 2px solid;
+    background-color: var(--bs-secondary);
+
+    &--active {
+      background-color: var(--bs-dark);
+    }
   }
 }
