--- a/src/custom_bootstrap.scss
+++ b/src/custom_bootstrap.scss
@@ -23,7 +23,7 @@ $blue: #42566a;
 $indigo: #6610f2;
 $purple: #6f42c1;
 $pink: #e83e8c;
-$red: #bf4044;;
+$red: #bf4044;
 $orange: #fd7e14;
 $yellow: #f39c12;
 $green: #00bc8c;
@@ -35,24 +35,24 @@ $brown: #b7410e;
 $beige: beige;
 
 $colors: (
-  "blue":       $blue,
-  "indigo":     $indigo,
-  "purple":     $purple,
-  "pink":       $pink,
-  "red":        $red,
-  "orange":     $orange,
-  "yellow":     $yellow,
-  "green":      $green,
-  "teal":       $teal,
-  "cyan":       $cyan,
-  "black":      $black,
-  "white":      $white,
-  "brown":      $brown,
+  "blue": $blue,
+  "indigo": $indigo,
+  "purple": $purple,
+  "pink": $pink,
+  "red": $red,
+  "orange": $orange,
+  "yellow": $yellow,
+  "green": $green,
+  "teal": $teal,
+  "cyan": $cyan,
+  "black": $black,
+  "white": $white,
+  "brown": $brown,
   "lightgreen": $lightgreen,
-  "darkgreen":  $darkgreen,
-  "beige":      $beige,
-  "gray":       $gray-600,
-  "gray-dark":  $gray-800
+  "darkgreen": $darkgreen,
+  "beige": $beige,
+  "gray": $gray-600,
+  "gray-dark": $gray-800,
 );
 
 $grays: (
@@ -65,9 +65,9 @@ $grays: (
   "700": $gray-700,
   "800": $gray-800,
   "900": $gray-900,
-  "brown":      $brown,
+  "brown": $brown,
   "lightgreen": $lightgreen,
-  "darkgreen":  $darkgreen,
+  "darkgreen": $darkgreen,
 );
 
 $primary: $blue;
@@ -94,9 +94,18 @@ $link-hover-color: #859dff;
 // Fonts
 
 // stylelint-disable-next-line value-keyword-case
-$font-family-sans-serif: Lato, -apple-system, BlinkMacSystemFont, "Segoe UI",
-  Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
-  "Segoe UI Emoji", "Segoe UI Symbol";
+$font-family-sans-serif:
+  Lato,
+  -apple-system,
+  BlinkMacSystemFont,
+  "Segoe UI",
+  Roboto,
+  "Helvetica Neue",
+  Arial,
+  sans-serif,
+  "Apple Color Emoji",
+  "Segoe UI Emoji",
+  "Segoe UI Symbol";
 $font-size-base: 0.9375rem;
 $font-size-sm: $font-size-base * 0.88;
 $h1-font-size: 3rem;
@@ -108,10 +117,10 @@ $text-muted: $gray-600;
 
 $table-accent-bg: $gray-800;
 $table-border-color: $gray-700;
-$table-cell-padding-y:        .75rem;
-$table-cell-padding-x:        .75rem;
-$table-cell-padding-y-sm:     .75rem;
-$table-cell-padding-x-sm:     .75rem;
+$table-cell-padding-y: 0.75rem;
+$table-cell-padding-x: 0.75rem;
+$table-cell-padding-y-sm: 0.75rem;
+$table-cell-padding-x-sm: 0.75rem;
 
 // Forms
 
@@ -216,7 +225,7 @@ $close-text-shadow: none;
 $pre-color: inherit;
 
 // Accordion
-.accordion{
+.accordion {
   --bs-accordion-active-bg: var(--bs-gray-900) !important;
 }
 
@@ -252,7 +261,7 @@ input.form-control:focus {
   color: white;
 }
 
-select.form-select{
+select.form-select {
   color: white !important;
   background-color: #4c4c4c !important;
 }
@@ -276,6 +285,11 @@ option {
 
 // Used by Angular for Screen-reader only text. Hiding it normally appears to be broken (?)
 // https://mdbootstrap.com/docs/angular/utilities/visually-hidden/#example1
-.visually-hidden{
+.visually-hidden {
   display: none;
+}
+
+.tooltip-inner {
+  --bs-tooltip-bg: var(--bs-info-bg-subtle);
+  --bs-tooltip-color: var(--bs-emphasis-color);
 }
