--- a/src/design/atoms/info-circle-tooltip/info-circle-tooltip.component.html
+++ b/src/design/atoms/info-circle-tooltip/info-circle-tooltip.component.html
@@ -9,7 +9,7 @@
 </strong>
 
 <ng-template #tooltipContent>
-  <div class="alert alert-info m-0 p-0">
+  <div class="m-0 p-0">
     {{ tooltip() }}
   </div>
 </ng-template>
