--- a/src/design/organisms/mobile-header/mobile-header.component.html
+++ b/src/design/organisms/mobile-header/mobile-header.component.html
@@ -24,5 +24,18 @@
         {{ title() }}
       </strong>
     </a>
+
+    @if ((online$ | async) === false) {
+      <app-icon
+        class="navbar-toggler"
+        [ngbTooltip]="tooltipContent"
+        [placement]="'left-bottom'"
+        [icon]="'triangle-exclamation'"
+      ></app-icon>
+    }
   </div>
 </nav>
+
+<ng-template #tooltipContent>
+  <div class="m-0 p-0">You are currently offline</div>
+</ng-template>
