--- a/src/design/organisms/mobile-header/mobile-header.component.scss
+++ b/src/design/organisms/mobile-header/mobile-header.component.scss
@@ -25,4 +25,8 @@
       margin-left: var(--spacer-2);
     }
   }
+
+  &__offline-indicator {
+    border: var(--bs-border-style) 2px var(--bs-border-color);
+  }
 }
