Add graph overview

--- a/src/design/atoms/selectable-entry/selectable-entry.component.html
+++ b/src/design/atoms/selectable-entry/selectable-entry.component.html
@@ -1,7 +1,7 @@
 @if (isSelectable()) {
   <button
     class="w-100 hover-highlight"
-    (click)="entryClick.emit(isActive() ? 'ACTIVE' : 'INACTIVE')"
+    (click)="entryClick.emit(isActive() ? 'INACTIVE' : 'ACTIVE')"
   >
     <ng-container *ngTemplateOutlet="entry"></ng-container>
   </button>
