Expand upon things

--- a/src/design/organisms/graph/graph.component.html
+++ b/src/design/organisms/graph/graph.component.html
@@ -1,4 +1,4 @@
-<div class="graph-container" #graphContainer>
+<div class="graph-container" #graphContainer data-swipe-ignore>
   <div class="graph-container__controls controls">
     <div class="controls__slider-container">
       <button
