--- a/src/design/molecules/form/form.component.html
+++ b/src/design/molecules/form/form.component.html
@@ -49,6 +49,7 @@
     [text]="'Submit'"
     [icon]="submitIcon()"
     [type]="'submit'"
+    [isLoading]="isLoading()"
   ></button>
 </ng-template>
 
@@ -62,5 +63,6 @@
     [tooltipClass]="'my-tooltip'"
     [icon]="'lock'"
     [text]="'Submit'"
+    [isLoading]="isLoading()"
   ></button>
 </ng-template>
